--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Android CI
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+ #release:
+  # types: [published]
 
 jobs:
   build:
